2003-08-11  Bruno Haible  <bruno@clisp.org>

	* autopoint.in: When local files have been modified, create a .diff
	file for the user's convenience.
	Suggested by Denis Barbier <barbier@debian.org>.

2003-08-07  Bruno Haible  <bruno@clisp.org>

	* autopoint.in: Fix the regular expression used to parse intl/VERSION.
	Patch by Denis Barbier <barbier@debian.org>.

2003-06-19  Bruno Haible  <bruno@clisp.org>

	* gettextize.in (m4filelist): Add intmax.m4, longdouble.m4,
	longlong.m4, printf-posix.m4, signed.m4, wchar_t.m4, wint_t.m4.

2003-05-22  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12.1 released.

2003-05-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12 released.

2003-05-08  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Ignore ACLOCAL_AMFLAGS options of the form -Idir when
	dir is an absolute pathname.
	Reported by Jürgen A. Erhard <jae+debian@jerhard.org>.

2003-04-29  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Recommend running automake only after aclocal,
	because automake 1.7 assumes that aclocal.m4 has already been built.

2003-04-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: Avoid rules with no lines. Don't use the force target.
	Correct wildcard syntax.
	Suggested by Jouk Jansen <joukj@hrem.stm.tudelft.nl>.

2003-04-11  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (archive.tar.gz): Avoid creating an empty tar.gz file.
	Reported by Martin Mokrejš <mmokrejs@natur.cuni.cz>.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: New file.
	* Makefile.am (EXTRA_DIST): Add Makefile.vms.

2003-03-17  Bruno Haible  <bruno@clisp.org>

	Native Woe32/MSVC support.
	* Makefile.msvc: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	Support for relocatable installation.
	* autopoint.in: Relocate $gettext_dir.
	* gettextize.in: Relocate $gettext_dir.

2003-02-16  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Create po/Makevars.template from installed